fix SearchResults producing horizontal scrollbar

--- a/src/views/SearchResults.module.scss
+++ b/src/views/SearchResults.module.scss
@@ -1,8 +1,8 @@
 @use '../styles/colors';
+@use '../styles/debug';
 
 .container {
   box-sizing: border-box;
-  width: 100vw;
   min-height: 100vh;
   background: colors.get(background-color);
   padding-top: 2rem;
